fix: center align hero section and adjust max-content width for better layout

--- a/src/app/main-component/atf/atf.component.scss
+++ b/src/app/main-component/atf/atf.component.scss
@@ -3,6 +3,7 @@
   width: 100%;
   display: flex;
   align-items: center;
+  justify-content: center;
   margin: 0;
   padding: 0;
   background: url("./../../../../public/assets/png/Design material/01_Background/Design Size Relation@3x/01_Hero.png");
@@ -14,9 +15,7 @@
 
 .max-content {
   max-width: 1440px;
-  width: 90%;
-  margin: 0 auto;
-  padding-top: 140px;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
