--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,7 +17,6 @@
 .max-content {
   max-width: 1440px;
   width: 100%;
-  padding: 0 36px;
 }
 
 @media (min-width: 1800px) {
